meme: fix align

--- a/expressions/meme/css/exp.css
+++ b/expressions/meme/css/exp.css
@@ -16,7 +16,6 @@ footer {
   width: 100%;
   z-index: 3;
   max-height: 33%;
-  min-height: 20%;
 }
 
 .ut-text {
